--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             var setting = {
                 wechatUrl: "wxp://f2f0sZ9Nv3BIYSI8kIWw5BPWy73hIM8if8MM",
                 aliUrl: "https://qr.alipay.com/fkx08267fw3lrqorwtkz649",
-                qrcodeApi: "https://www.zhihu.com/qrcode?url="
+                qrcodeApi: "https://api.qrserver.com/v1/create-qr-code/?data="
             };
             if (
                 !/^http(s*):\/\//.test(location.href) ||
